--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,85 +1,51 @@
-version: '3.8'
 
 services:
-  # MySQL Database
+  # MySQL 데이터베이스
   mysql:
     image: mysql:8.0
     container_name: studyjpa-mysql
-    restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: ?{MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ?{MYSQL_DATABASE}
-      MYSQL_USER: ?{MYSQL_USER}
-      MYSQL_PASSWORD: ?{MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: root123
+      MYSQL_DATABASE: studyjpa
+      MYSQL_USER: studyjpa
+      MYSQL_PASSWORD: studyjpa123
     ports:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./docker/mysql/init:/docker-entrypoint-initdb.d
-    networks:
-      - studyjpa-network
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      timeout: 20s
-      retries: 10
+    command: --default-authentication-plugin=mysql_native_password
+    restart: unless-stopped
 
-  # Spring Boot Application
+  # Spring Boot 애플리케이션
   app:
-    build:
+    build: 
       context: .
       dockerfile: Dockerfile
     container_name: studyjpa-app
-    restart: unless-stopped
-    depends_on:
-      mysql:
-        condition: service_healthy
     environment:
       SPRING_PROFILES_ACTIVE: docker
-      SPRING_DATASOURCE_URL: ?{SPRING_DATASOURCE_URL}
-      SPRING_DATASOURCE_USERNAME: ?{MYSQL_USER}
-      SPRING_DATASOURCE_PASSWORD: ?{MYSQL_PASSWORD}
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
-      SPRING_JPA_SHOW_SQL: true
-      SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL: true
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/studyjpa?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
+      SPRING_DATASOURCE_USERNAME: studyjpa
+      SPRING_DATASOURCE_PASSWORD: studyjpa123
+      JWT_SECRET: dGVzdC1zZWNyZXQta2V5LWZvci1qd3QtdG9rZW4tZ2VuZXJhdGlvbi1hbmQtdmFsaWRhdGlvbi1wcm9jZXNz
     ports:
       - "8080:8080"
-    networks:
-      - studyjpa-network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 60s
-
-  # Nginx Reverse Proxy
-  nginx:
-    image: nginx:alpine
-    container_name: studyjpa-nginx
-    restart: unless-stopped
     depends_on:
-      app:
-        condition: service_healthy
+      - mysql
+    restart: unless-stopped
+
+  # 프론트엔드 (Nginx)
+  frontend:
+    image: nginx:alpine
+    container_name: studyjpa-Nginx
     ports:
       - "80:80"
-      - "443:443"
     volumes:
-      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./docker/nginx/conf.d:/etc/nginx/conf.d
-      - ./docker/nginx/ssl:/etc/nginx/ssl
-      - ./docker/nginx/logs:/var/log/nginx
-    networks:
-      - studyjpa-network
-    healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      - ./frontend:/usr/share/nginx/html
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - app
+    restart: unless-stopped
 
 volumes:
   mysql_data:
-    driver: local
-
-networks:
-  studyjpa-network:
-    driver: bridge
