--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -1,36 +1,37 @@
 spring:
   application:
     name: StudyJpa
-  
+
   datasource:
-    url: jdbc:mysql://mysql:3306/studyjpa?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
-    username: jpauser
-    password: jpapassword
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
-    
+  
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
     properties:
       hibernate:
         format_sql: true
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        show_sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
-    
-  sql:
-    init:
-      mode: always
-      
-# Actuator for health checks
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info
-  endpoint:
-    health:
-      show-details: always
+
+  data:
+    jpa:
+      repositories:
+        enabled: true
+
+jwt:
+  secret: ${JWT_SECRET}
+
+
+# Swagger UI 설정
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+  api-docs:
+    path: /api-docs
 
 server:
   port: 8080
