--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,27 @@
-spring.application.name=StudyJpa
+spring:
+  application:
+    name: StudyJpa
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/studyjpa?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
+    username: studyjpa
+    password: studyjpa123
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update   # 개발 환경에서는 update, 운영에서는 validate 권장
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+
+server:
+  port: 8080
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html   # Swagger UI 접속 경로
+  api-docs:
+    path: /api-docs          # OpenAPI Docs(JSON) 경로
